# quewi

./: .gitattributes  .gitignore  BACKLOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  README.md  SECURITY.md  design.md  mkdocs.yml  structure.md  tsan-suppressions.txt
.github/workflows/: ci.yml  docs.yml  perf.yml  release.yml
docs/: audio.md  cue-types.md  helios-tier1-3-recap.md  in-app-updater.md  index.md  keyboard-shortcuts.md  macos-signing-setup.md  media-import.md  osc-coverage.md  osc-remote-api.md  performance-budgets.md  qlab-parity-roadmap.md
docs/about/: credits.md  license.md
docs/assets/: quewi.css
docs/cue-types/: control-cues.md  fade.md  group.md  light.md  memo.md  midi.md  osc.md  video.md  wait.md
docs/dev/: console-protocols.md  design-review.md  quewi-mix-spec.md  realtime-fx-plan.md  release-1.0-plan.md  release-signing.md  session-handoff.md  show-nodes-idea.md  work-plan.md
docs/getting-started/: concepts.md  install.md  quickstart.md
docs/integration/: audio.md  lighting.md  midi.md  video.md
docs/osc-control/: field-reference.md  overview.md  recipes.md  reference.md
docs/reference/: file-format.md
docs/support/: faq.md  macos-gatekeeper.md  troubleshooting.md  updates.md
docs/using-quewi/: cue-types.md  inspector.md  preflight.md  show-mode.md  transport.md
resources/: resources.qrc
resources/icons/: quewi.rc
resources/installer/: branding.wxs
resources/linux/: quewi.desktop
resources/macos/: dmg-readme.txt  dmg_setup.applescript  entitlements.plist  fix-gatekeeper.command
resources/themes/: quewi-dark.qss  quewi-light.qss
scripts/: make-icon.ps1
src/app/: CMakeLists.txt  GoEngine.cpp  GoEngine.h  MainWindow.cpp  MainWindow.h  UpdateChecker.cpp  UpdateChecker.h  UpdateInstaller.cpp  UpdateInstaller.h  main.cpp
src/audio/: AudioCue.cpp  AudioCue.h  AudioEditorModel.cpp  AudioEditorModel.h  AudioEditorRenderer.cpp  AudioEditorRenderer.h  AudioEffect.cpp  AudioEffect.h  AudioEngine.cpp  AudioEngine.h  AudioFile.cpp  AudioFile.h  AudioTrajectory.cpp  AudioTrajectory.h  CMakeLists.txt  Db.h  SpeakerPatch.cpp  SpeakerPatch.h  Vbap.cpp  Vbap.h
src/audio/effects/: CompressorEffect.cpp  CompressorEffect.h  DelayEffect.cpp  DelayEffect.h  EqEffect.cpp  EqEffect.h  ReverbEffect.cpp  ReverbEffect.h
src/core/: CMakeLists.txt  CartGrid.cpp  CartGrid.h  CueList.cpp  CueList.h  CueListModel.cpp  CueListModel.h  PatchManager.cpp  PatchManager.h  ScriptModel.cpp  ScriptModel.h  UndoCommands.cpp  UndoCommands.h  Workspace.cpp  Workspace.h
src/cues/: CMakeLists.txt  Cue.cpp  Cue.h  FadeCue.cpp  FadeCue.h  GroupCue.cpp  GroupCue.h  MemoCue.cpp  MemoCue.h  TargetingCue.cpp  TargetingCue.h  WaitCue.cpp  WaitCue.h
src/lighting/: ArtNet.cpp  ArtNet.h  CMakeLists.txt  LightCue.cpp  LightCue.h  LightingEngine.cpp  LightingEngine.h  Sacn.cpp  Sacn.h
src/midi/: CMakeLists.txt  MidiCue.cpp  MidiCue.h  MidiEngine.cpp  MidiEngine.h  MidiInputEngine.cpp  MidiInputEngine.h
src/mix/: CMakeLists.txt  ConsoleLink.cpp  ConsoleLink.h  Dm7Link.cpp  Dm7Link.h  Dm7Value.cpp  Dm7Value.h  MixCue.cpp  MixCue.h  MixShow.cpp  MixShow.h  X32Link.cpp  X32Link.h  X32Value.cpp  X32Value.h
src/osc/: CMakeLists.txt  OscCodec.cpp  OscCodec.h  OscCue.cpp  OscCue.h  OscDictionary.cpp  OscDictionary.h  OscEngine.cpp  OscEngine.h  OscMessage.h  OscPattern.cpp  OscPattern.h  OscQueryServer.cpp  OscQueryServer.h  OscSlip.cpp  OscSlip.h
src/show/: CMakeLists.txt  ShowFile.cpp  ShowFile.h
src/ui/: AboutDialog.cpp  AboutDialog.h  ActiveCuesPanel.cpp  ActiveCuesPanel.h  AnimatedButton.cpp  AnimatedButton.h  AudioEditorWindow.cpp  AudioEditorWindow.h  CMakeLists.txt  CartView.cpp  CartView.h  ChannelEditorDialog.cpp  ChannelEditorDialog.h  CommandPalette.cpp  CommandPalette.h  CompressorDialog.cpp  CompressorDialog.h  CornerPinEditor.cpp  CornerPinEditor.h  CueListView.cpp  CueListView.h  EffectsRackWidget.cpp  EffectsRackWidget.h  FindReplaceDialog.cpp  FindReplaceDialog.h  Inspector.cpp  Inspector.h  LevelMeter.h  LiveAudioScope.cpp  LiveAudioScope.h  LiveEffectDevice.cpp  LiveEffectDevice.h  MediaImportDialog.cpp  MediaImportDialog.h  MediaImportService.cpp  MediaImportService.h  MixGridModel.cpp  MixGridModel.h  MixView.cpp  MixView.h  (+50 more)
src/video/: CMakeLists.txt  Compositor.cpp  Compositor.h  CompositorWindow.cpp  CompositorWindow.h  ImageLayer.cpp  ImageLayer.h  Layer.h  TestPatternLayer.cpp  TestPatternLayer.h  TextLayer.cpp  TextLayer.h  VideoCue.cpp  VideoCue.h  VideoEngine.cpp  VideoEngine.h  VideoLayer.cpp  VideoLayer.h  VideoOutputWindow.cpp  VideoOutputWindow.h
tests/: CMakeLists.txt  test_artnet.cpp  test_audio_smoke.cpp  test_console_link.cpp  test_dm7_link.cpp  test_dm7_value.cpp  test_fade.cpp  test_mix_grid.cpp  test_mix_persistence.cpp  test_mix_show.cpp  test_osc_codec.cpp  test_osc_loopback.cpp  test_osc_pattern.cpp  test_osc_slip.cpp  test_smoke.cpp  test_trajectory.cpp  test_vbap.cpp  test_x32_emulator.cpp  test_x32_link.cpp  test_x32_value.cpp
tools/: dm7_probe.py  osc_probe.py
