add_library(quewi_ui STATIC
    Theme.h
    Theme.cpp
    CueListView.h
    CueListView.cpp
    Inspector.h
    Inspector.cpp
    TransportBar.h
    TransportBar.cpp
    PreferencesDialog.h
    PreferencesDialog.cpp
    OscMonitor.h
    OscMonitor.cpp
    WaveformWidget.h
    WaveformWidget.cpp
    AudioEditorWindow.h
    AudioEditorWindow.cpp
    TimelineCanvas.h
    TimelineCanvas.cpp
    EffectsRackWidget.h
    EffectsRackWidget.cpp
    ParametricEqDialog.h
    ParametricEqDialog.cpp
    PatchEditorDialog.h
    PatchEditorDialog.cpp
    SpectrogramWidget.h
    SpectrogramWidget.cpp
    ActiveCuesPanel.h
    ActiveCuesPanel.cpp
    PreflightDialog.h
    PreflightDialog.cpp
    CommandPalette.h
    CommandPalette.cpp
    ShortcutManager.h
    ShortcutManager.cpp
    ShortcutsDialog.h
    ShortcutsDialog.cpp
    FindReplaceDialog.h
    FindReplaceDialog.cpp
)
target_include_directories(quewi_ui PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_link_libraries(quewi_ui PUBLIC Qt6::Widgets quewi_core quewi_osc quewi_audio quewi_lighting quewi_video quewi_midi)
