add_library(quewi_ui STATIC
    Theme.h
    Theme.cpp
    WhatsNewDialog.h
    WhatsNewDialog.cpp
    MixGridModel.h
    MixGridModel.cpp
    MixView.h
    MixView.cpp
    ChannelEditorDialog.h
    ChannelEditorDialog.cpp
    SmoothScroll.h
    SmoothScroll.cpp
    AnimatedButton.h
    AnimatedButton.cpp
    CueListView.h
    CueListView.cpp
    Inspector.h
    Inspector.cpp
    TransportBar.h
    TransportBar.cpp
    PreferencesDialog.h
    PreferencesDialog.cpp
    OscMonitor.h
    OscMonitor.cpp
    WaveformWidget.h
    WaveformWidget.cpp
    AudioEditorWindow.h
    AudioEditorWindow.cpp
    TimelineCanvas.h
    TimelineCanvas.cpp
    EffectsRackWidget.h
    EffectsRackWidget.cpp
    ParametricEqDialog.h
    ParametricEqDialog.cpp
    CompressorDialog.h
    CompressorDialog.cpp
    PatchEditorDialog.h
    PatchEditorDialog.cpp
    SpectrogramImage.h
    SpectrogramImage.cpp
    LiveAudioScope.h
    LiveAudioScope.cpp
    LiveEffectDevice.h
    LiveEffectDevice.cpp
    LevelMeter.h
    ActiveCuesPanel.h
    ActiveCuesPanel.cpp
    PreflightDialog.h
    PreflightDialog.cpp
    CommandPalette.h
    CommandPalette.cpp
    ShortcutManager.h
    ShortcutManager.cpp
    ShortcutsDialog.h
    ShortcutsDialog.cpp
    FindReplaceDialog.h
    FindReplaceDialog.cpp
    AboutDialog.h
    AboutDialog.cpp
    WelcomeDialog.h
    WelcomeDialog.cpp
    SpeakerPatchDialog.h
    SpeakerPatchDialog.cpp
    StageView.h
    StageView.cpp
    Notifications.h
    Notifications.cpp
    NotificationsDialog.h
    NotificationsDialog.cpp
    CornerPinEditor.h
    CornerPinEditor.cpp
    ProjectionMappingDialog.h
    ProjectionMappingDialog.cpp
    CartView.h
    CartView.cpp
    VideoScrubber.h
    VideoScrubber.cpp
    ScriptViewer.h
    ScriptViewer.cpp
    ScriptPdfView.h
    ScriptPdfView.cpp
    ScriptWindow.h
    ScriptWindow.cpp
    MediaImportService.h
    MediaImportService.cpp
    MediaImportDialog.h
    MediaImportDialog.cpp
)
target_include_directories(quewi_ui PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_link_libraries(quewi_ui PUBLIC Qt6::Widgets Qt6::Pdf Qt6::PdfWidgets Qt6::Network Qt6::Multimedia Qt6::MultimediaWidgets Qt6::Concurrent quewi_core quewi_osc quewi_audio quewi_lighting quewi_video quewi_midi quewi_show quewi_mix)
